courses/430_programming-languages/assignment-4/tests/error/error09.sml
val prog =
  PROGRAM
    {decls=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY {lft=EXP_NUM 3,opr=BOP_LE,rht=EXP_STRING "bob"}}]}
  : program
;
